# meross-auto-lighting

./: .gitignore  README.md  config.example.yaml  meross_auto_lighting.py  pyproject.toml
tests/: test_meross_auto_lighting.py
