[project]
name = "meross-auto-lighting"
version = "0.1.0"
description = "A smart schedule-based control Meross smart lights"
authors = [
    { name = "Matthew D. Scholefield", email = "matthew331199@gmail.com" },
]
dependencies = [
    "meross-iot>=0.4.7.5",
    "pydantic>=2.10.3",
    "setuptools>=75.6.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/MatthewScholefield/meross-auto-lighting"

[project.scripts]
"meross-auto-lighting" = "meross_auto_lighting:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pre-commit>=4.0.1", "pytest>=8.3.4"]

[tool.hatch.build.targets.wheel]
include = ["meross_auto_lighting.py"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "S106"]

[tool.ruff.format]
quote-style = "single"
